lib/src/uws.h

/**
 * The app type.
 */
typedef void* uws_app_t;
/**
 * The response type.
 */
typedef void* uws_res_t;
/**
 * The request type.
 */
typedef void* uws_req_t;
/**
 * The web socket type.
 */
typedef void* uws_web_socket_t;
/**
 * The loop type.
 */
typedef void* uws_loop_t;
/**
 * The client app type.
 */
typedef void* uws_client_app_t;
/**
 * The client connection type.
 */
typedef void* uws_client_conn_t;
/**
 * The client request type.
 */
typedef void* uws_client_req_t;
/**
 * The client response type.
 */
typedef void* uws_client_res_t;
/**
 * The TCP client app type.
 */
typedef void* uws_tcp_client_app_t;
/**
 * The TCP server app type.
 */
typedef void* uws_tcp_server_app_t;
/**
 * The TCP connection type.
 */
typedef void* uws_tcp_conn_t;
/**
 * The SSL options type.
 */
typedef struct uws_ssl_options_s {
    const char* key_file_name;
    const char* cert_file_name;
    const char* passphrase;
    const char* dh_params_file_name;
    const char* ca_file_name;
    int ssl_prefer_low_memory;
} uws_ssl_options_t;
/**
 * Creates an app.
 */
BOP_API uws_app_t uws_create_app(void);
/**
 * Creates an SSL app.
 */
BOP_API uws_app_t uws_create_ssl_app(uws_ssl_options_t options);
/**
 * Destroys an app.
 */
BOP_API void uws_app_destroy(uws_app_t app);
/**
 * Checks if an app is SSL.
 */
BOP_API bool uws_app_is_ssl(uws_app_t app);
typedef void (*uws_http_handler_t)(void* user_data, uws_res_t res, uws_req_t req);
/**
 * Adds a GET route to the app.
 */
BOP_API void uws_app_get(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * Adds a POST route to the app.
 */
BOP_API void uws_app_post(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * Adds a PUT route to the app.
 */
BOP_API void uws_app_put(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * Adds a DELETE route to the app.
 */
BOP_API void uws_app_del(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * Adds a PATCH route to the app.
 */
BOP_API void uws_app_patch(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * Adds a PATCH route to the app.
 */
BOP_API void uws_app_patch(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * Adds a OPTIONS route to the app.
 */
BOP_API void uws_app_options(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * Adds a ANY route to the app.
 */
BOP_API void uws_app_any(uws_app_t app, void* user_data, const char* pattern, size_t pattern_length, uws_http_handler_t handler);
/**
 * The WebSocket opcode.
 */
typedef enum {
    UWS_OPCODE_CONTINUE = 0,
    UWS_OPCODE_TEXT = 1,
    UWS_OPCODE_BINARY = 2,
    UWS_OPCODE_CLOSE = 8,
    UWS_OPCODE_PING = 9,
    UWS_OPCODE_PONG = 10
} uws_opcode_t;
/**
 * The WebSocket behavior.
 */
typedef struct uws_ws_behavior_s {
    uint16_t compression;  /* uWS::CompressOptions, cast to int */
    uint16_t idle_timeout;
    uint32_t max_payload_length;
    uint32_t max_backpressure;
    uint16_t max_lifetime;
    bool close_on_backpressure_limit;
    bool reset_idle_timeout_on_send;
    bool send_pings_automatically;
    bool reserved;
    uint16_t reserved_2;
    uint32_t reserved_3;
    void* (*upgrade)(uws_res_t res, uws_req_t req, void* context, void* per_pattern_user_data);
    void* (*create_user_data)(void* per_pattern_user_data);
    void (*open)(uws_web_socket_t ws, void* user_data);
    void (*message)(uws_web_socket_t ws, void* user_data, const char* message, size_t length, uws_opcode_t opcode);
    void (*dropped)(uws_web_socket_t ws, void* user_data, const char* message, size_t length, uws_opcode_t opcode);
    void (*drain)(uws_web_socket_t ws, void* user_data);
    void (*ping)(uws_web_socket_t ws, void* user_data, const char* message, size_t length);
    void (*pong)(uws_web_socket_t ws, void* user_data, const char* message, size_t length);
    void (*close)(uws_web_socket_t ws, void* user_data, int code, const char* message, size_t length);
    void (*subscription)(uws_web_socket_t ws, void* user_data, const char* topic, int subscriptions, int old_subscriptions);
    void (*destroy_user_data)(void* user_data);
    void* per_pattern_user_data;
} uws_ws_behavior_t;
BOP_API void uws_app_ws(uws_app_t app, const char* pattern, size_t pattern_length, uws_ws_behavior_t behavior);
BOP_API void uws_app_listen(
    uws_app_t app,
    void* user_data,
    const char* host,
    size_t host_length,
    int port,
    int options,
    void (*handler)(void* listen_socket, void* user_data)
);
BOP_API void uws_app_listen_unix(
    uws_app_t app,
    void* user_data,
    const char* path,
    size_t path_length,
    int options,
    void (*handler)(void* listen_socket, void* user_data)
);
BOP_API uws_loop_t uws_app_loop(uws_app_t app);
BOP_API void uws_app_run(uws_app_t app);
BOP_API void uws_loop_defer(uws_loop_t loop, void* user_data, void (*callback)(uws_loop_t loop, void* user_data));
/**
 * Upgrades the response to a WebSocket.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param sec_web_socket_key The sec web socket key.
 * @param sec_web_socket_key_length The sec web socket key length.
 * @param sec_web_socket_protocol The sec web socket protocol.
 * @param sec_web_socket_protocol_length The sec web socket protocol length.
 * @param sec_web_socket_extensions The sec web socket extensions.
 * @param sec_web_socket_extensions_length The sec web socket extensions length.
 * @param web_socket_context The web socket context.
 */
BOP_API void uws_res_upgrade(
    uws_res_t res,
    void* user_data,
    const char* sec_web_socket_key,
    size_t sec_web_socket_key_length,
    const char* sec_web_socket_protocol,
    size_t sec_web_socket_protocol_length,
    const char* sec_web_socket_extensions,
    size_t sec_web_socket_extensions_length,
    struct us_socket_context_t* web_socket_context
);
/**
 * Gets the loop of the response.
 *
 * @param res The response.
 * @return The loop.
 */
BOP_API uws_loop_t uws_res_loop(uws_res_t res);
/**
 * Defers a handler for the response.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param callback The callback.
 */
BOP_API void uws_res_defer(uws_res_t res, void* user_data, void (*callback)(uws_loop_t loop, uws_res_t res, void* user_data));
/**
 * Corks the response.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param handler The handler.
 */
BOP_API void uws_res_cork(uws_res_t res, void* user_data, void (*handler)(uws_res_t res, void* user_data));
/**
 * On writable.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param handler The handler.
 */
BOP_API void uws_res_on_writable(uws_res_t res, void* user_data, bool (*handler)(uws_res_t res, void* user_data, uint64_t m));
/**
 * On aborted.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param handler The handler.
 */
BOP_API void uws_res_on_aborted(uws_res_t res, void* user_data, void (*handler)(uws_res_t res, void* user_data));
/**
 * On data.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param handler The handler.
 */
BOP_API void uws_res_on_data(uws_res_t res, void* user_data, void (*handler)(uws_res_t res, void* user_data, const char* data, size_t data_length, bool fin));