rust/bop-rs/src/bindings.rs

unsafe extern "C" {
    pub fn bop_mpmc_blocking_dequeue_bulk_wait(
        queue: *mut bop_mpmc_blocking,
        items: *mut u64,
        max_size: usize,
        timeout_micros: i64,
    ) -> i64;
}
unsafe extern "C" {
    pub fn bop_mpmc_blocking_dequeue_bulk_wait_token(
        token: *mut bop_mpmc_blocking_consumer_token,
        items: *mut u64,
        max_size: usize,
        timeout_micros: i64,
    ) -> i64;
}
#[doc = " The app type."]
pub type uws_app_t = *mut ::std::os::raw::c_void;
#[doc = " The response type."]
pub type uws_res_t = *mut ::std::os::raw::c_void;
#[doc = " The request type."]
pub type uws_req_t = *mut ::std::os::raw::c_void;
#[doc = " The web socket type."]
pub type uws_web_socket_t = *mut ::std::os::raw::c_void;
#[doc = " The loop type."]
pub type uws_loop_t = *mut ::std::os::raw::c_void;
#[doc = " The client app type."]
pub type uws_client_app_t = *mut ::std::os::raw::c_void;
#[doc = " The client connection type."]
pub type uws_client_conn_t = *mut ::std::os::raw::c_void;
#[doc = " The client request type."]
pub type uws_client_req_t = *mut ::std::os::raw::c_void;
#[doc = " The client response type."]
pub type uws_client_res_t = *mut ::std::os::raw::c_void;
#[doc = " The TCP client app type."]
pub type uws_tcp_client_app_t = *mut ::std::os::raw::c_void;
#[doc = " The TCP server app type."]
pub type uws_tcp_server_app_t = *mut ::std::os::raw::c_void;
#[doc = " The TCP connection type."]
pub type uws_tcp_conn_t = *mut ::std::os::raw::c_void;
#[doc = " The SSL options type."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct uws_ssl_options_s {
    pub key_file_name: *const ::std::os::raw::c_char,
    pub cert_file_name: *const ::std::os::raw::c_char,
    pub passphrase: *const ::std::os::raw::c_char,
    pub dh_params_file_name: *const ::std::os::raw::c_char,
    pub ca_file_name: *const ::std::os::raw::c_char,
    pub ssl_prefer_low_memory: ::std::os::raw::c_int,
}
impl Default for uws_ssl_options_s {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " The SSL options type."]
pub type uws_ssl_options_t = uws_ssl_options_s;
unsafe extern "C" {
    #[doc = " Creates an app."]
    pub fn uws_create_app() -> uws_app_t;
}
unsafe extern "C" {
    #[doc = " Creates an SSL app."]
    pub fn uws_create_ssl_app(options: uws_ssl_options_t) -> uws_app_t;
}
unsafe extern "C" {
    #[doc = " Destroys an app."]
    pub fn uws_app_destroy(app: uws_app_t);
}
unsafe extern "C" {
    #[doc = " Checks if an app is SSL."]
    pub fn uws_app_is_ssl(app: uws_app_t) -> bool;
}
pub type uws_http_handler_t = ::std::option::Option<
    unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void, res: uws_res_t, req: uws_req_t),
>;
unsafe extern "C" {
    #[doc = " Adds a GET route to the app."]
    pub fn uws_app_get(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        handler: uws_http_handler_t,
    );
}
unsafe extern "C" {
    #[doc = " Adds a POST route to the app."]
    pub fn uws_app_post(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        handler: uws_http_handler_t,
    );
}
unsafe extern "C" {
    #[doc = " Adds a PUT route to the app."]
    pub fn uws_app_put(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        handler: uws_http_handler_t,
    );
}
unsafe extern "C" {
    #[doc = " Adds a DELETE route to the app."]
    pub fn uws_app_del(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        handler: uws_http_handler_t,
    );
}
unsafe extern "C" {
    #[doc = " Adds a PATCH route to the app."]
    pub fn uws_app_patch(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        handler: uws_http_handler_t,
    );
}
unsafe extern "C" {
    #[doc = " Adds a OPTIONS route to the app."]
    pub fn uws_app_options(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        handler: uws_http_handler_t,
    );
}
unsafe extern "C" {
    #[doc = " Adds a ANY route to the app."]
    pub fn uws_app_any(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        handler: uws_http_handler_t,
    );
}
pub const uws_opcode_t_UWS_OPCODE_CONTINUE: uws_opcode_t = 0;
pub const uws_opcode_t_UWS_OPCODE_TEXT: uws_opcode_t = 1;
pub const uws_opcode_t_UWS_OPCODE_BINARY: uws_opcode_t = 2;
pub const uws_opcode_t_UWS_OPCODE_CLOSE: uws_opcode_t = 8;
pub const uws_opcode_t_UWS_OPCODE_PING: uws_opcode_t = 9;
pub const uws_opcode_t_UWS_OPCODE_PONG: uws_opcode_t = 10;
#[doc = " The WebSocket opcode."]
pub type uws_opcode_t = ::std::os::raw::c_int;
#[doc = " The WebSocket behavior."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct uws_ws_behavior_s {
    pub compression: u16,
    pub idle_timeout: u16,
    pub max_payload_length: u32,
    pub max_backpressure: u32,
    pub max_lifetime: u16,
    pub close_on_backpressure_limit: bool,
    pub reset_idle_timeout_on_send: bool,
    pub send_pings_automatically: bool,
    pub reserved: bool,
    pub reserved_2: u16,
    pub reserved_3: u32,
    pub upgrade: ::std::option::Option<
        unsafe extern "C" fn(
            res: uws_res_t,
            req: uws_req_t,
            context: *mut ::std::os::raw::c_void,
            per_pattern_user_data: *mut ::std::os::raw::c_void,
        ) -> *mut ::std::os::raw::c_void,
    >,
    pub create_user_data: ::std::option::Option<
        unsafe extern "C" fn(
            per_pattern_user_data: *mut ::std::os::raw::c_void,
        ) -> *mut ::std::os::raw::c_void,
    >,
    pub open: ::std::option::Option<
        unsafe extern "C" fn(ws: uws_web_socket_t, user_data: *mut ::std::os::raw::c_void),
    >,
    pub message: ::std::option::Option<
        unsafe extern "C" fn(
            ws: uws_web_socket_t,
            user_data: *mut ::std::os::raw::c_void,
            message: *const ::std::os::raw::c_char,
            length: usize,
            opcode: uws_opcode_t,
        ),
    >,
    pub dropped: ::std::option::Option<
        unsafe extern "C" fn(
            ws: uws_web_socket_t,
            user_data: *mut ::std::os::raw::c_void,
            message: *const ::std::os::raw::c_char,
            length: usize,
            opcode: uws_opcode_t,
        ),
    >,
    pub drain: ::std::option::Option<
        unsafe extern "C" fn(ws: uws_web_socket_t, user_data: *mut ::std::os::raw::c_void),
    >,
    pub ping: ::std::option::Option<
        unsafe extern "C" fn(
            ws: uws_web_socket_t,
            user_data: *mut ::std::os::raw::c_void,
            message: *const ::std::os::raw::c_char,
            length: usize,
        ),
    >,
    pub pong: ::std::option::Option<
        unsafe extern "C" fn(
            ws: uws_web_socket_t,
            user_data: *mut ::std::os::raw::c_void,
            message: *const ::std::os::raw::c_char,
            length: usize,
        ),
    >,
    pub close: ::std::option::Option<
        unsafe extern "C" fn(
            ws: uws_web_socket_t,
            user_data: *mut ::std::os::raw::c_void,
            code: ::std::os::raw::c_int,
            message: *const ::std::os::raw::c_char,
            length: usize,
        ),
    >,
    pub subscription: ::std::option::Option<
        unsafe extern "C" fn(
            ws: uws_web_socket_t,
            user_data: *mut ::std::os::raw::c_void,
            topic: *const ::std::os::raw::c_char,
            subscriptions: ::std::os::raw::c_int,
            old_subscriptions: ::std::os::raw::c_int,
        ),
    >,
    pub destroy_user_data:
        ::std::option::Option<unsafe extern "C" fn(user_data: *mut ::std::os::raw::c_void)>,
    pub per_pattern_user_data: *mut ::std::os::raw::c_void,
}
impl Default for uws_ws_behavior_s {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " The WebSocket behavior."]
pub type uws_ws_behavior_t = uws_ws_behavior_s;
unsafe extern "C" {
    pub fn uws_app_ws(
        app: uws_app_t,
        pattern: *const ::std::os::raw::c_char,
        pattern_length: usize,
        behavior: uws_ws_behavior_t,
    );
}
unsafe extern "C" {
    pub fn uws_app_listen(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        host: *const ::std::os::raw::c_char,
        host_length: usize,
        port: ::std::os::raw::c_int,
        options: ::std::os::raw::c_int,
        handler: ::std::option::Option<
            unsafe extern "C" fn(
                listen_socket: *mut ::std::os::raw::c_void,
                user_data: *mut ::std::os::raw::c_void,
            ),
        >,
    );
}
unsafe extern "C" {
    pub fn uws_app_listen_unix(
        app: uws_app_t,
        user_data: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
        path_length: usize,
        options: ::std::os::raw::c_int,
        handler: ::std::option::Option<
            unsafe extern "C" fn(
                listen_socket: *mut ::std::os::raw::c_void,
                user_data: *mut ::std::os::raw::c_void,
            ),
        >,
    );
}
unsafe extern "C" {
    pub fn uws_app_loop(app: uws_app_t) -> uws_loop_t;
}
unsafe extern "C" {
    pub fn uws_app_run(app: uws_app_t);
}
unsafe extern "C" {
    pub fn uws_loop_defer(
        loop_: uws_loop_t,
        user_data: *mut ::std::os::raw::c_void,
        callback: ::std::option::Option<
            unsafe extern "C" fn(loop_: uws_loop_t, user_data: *mut ::std::os::raw::c_void),
        >,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct us_socket_context_t {
    _unused: [u8; 0],
}
unsafe extern "C" {
    #[doc = " Upgrades the response to a WebSocket.\n\n @param res The response.\n @param user_data The user data.\n @param sec_web_socket_key The sec web socket key.\n @param sec_web_socket_key_length The sec web socket key length.\n @param sec_web_socket_protocol The sec web socket protocol.\n @param sec_web_socket_protocol_length The sec web socket protocol length.\n @param sec_web_socket_extensions The sec web socket extensions.\n @param sec_web_socket_extensions_length The sec web socket extensions length.\n @param web_socket_context The web socket context."]
    pub fn uws_res_upgrade(
        res: uws_res_t,
        user_data: *mut ::std::os::raw::c_void,
        sec_web_socket_key: *const ::std::os::raw::c_char,
        sec_web_socket_key_length: usize,
        sec_web_socket_protocol: *const ::std::os::raw::c_char,
        sec_web_socket_protocol_length: usize,
        sec_web_socket_extensions: *const ::std::os::raw::c_char,
        sec_web_socket_extensions_length: usize,
        web_socket_context: *mut us_socket_context_t,
    );
}
unsafe extern "C" {
    #[doc = " Gets the loop of the response.\n\n @param res The response.\n @return The loop."]
    pub fn uws_res_loop(res: uws_res_t) -> uws_loop_t;
}
